# powerpoint-automation-toolkit

./: .gitignore  README.md  pptx_theme_apply.py  pyproject.toml  requirements-dev.txt  requirements.txt
Presentation-Docs/: build_presentation_deck.ps1
UnifiedHPC-Docs/: FDA_Unified_HPC_Structured_Deck_rerun_modified.pptx  create_slide_images.ps1  generate_unified_hpc_ppt.ps1
documentation/: codebase_summary_2026-04-01.md
info/: codebase_summary_2026-04-01.md
powerpoint_automation_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
powerpoint_toolkit/: __init__.py  __main__.py  charts.py  cli.py  presentation.py  shapes.py  slides.py
presentation-generation/: edit_jpg_and_update_pptx.py  export_slide_images.ps1  sample_image_edits.json
presentation-processing/: apply_template_and_extract_text.ps1  correct_spelling_and_log.ps1  correct_spelling_and_log_basic.ps1  correct_spelling_and_log_improved.ps1
tests/: __init__.py  test_charts.py  test_cli.py  test_presentation.py  test_shapes.py  test_slides.py
